--- a/docker-compose_hw1_with_index.yaml
+++ b/docker-compose_hw1_with_index.yaml
@@ -1,7 +1,7 @@
 name: highload_0224_skv_hw1_with_index
 services:
   spring-app:
-    build: .
+    build: ./mainapp
     entrypoint: ["mvn", "spring-boot:run", "-Dmaven.test.skip=true"]
     depends_on:
       - db
@@ -13,7 +13,7 @@ services:
     ports:
       - "8081:8080"
     healthcheck:
-      test: curl -sS http://127.0.0.1:8080 || exit 1
+      test: "curl --fail --silent 127.0.0.1:8080/actuator/health | grep UP || exit 1"
       interval: 5s
       timeout: 5s
       retries: 3
