--- a/docker/docker-compose_hw2_no_index.yaml
+++ b/docker/docker-compose_hw2_no_index.yaml
@@ -1,7 +1,7 @@
-name: highload_0224_skv_hw1_with_index
+name: highload_0224_skv_hw2_no_index
 services:
   spring-app:
-    build: ./mainapp
+    build: ../mainapp
     entrypoint: ["mvn", "spring-boot:run", "-Dmaven.test.skip=true"]
     depends_on:
       - db
@@ -26,8 +26,7 @@ services:
       POSTGRES_PASSWORD: postgres
       PGPORT: 5434
     volumes:
-      - ./init_hw0.sql:/docker-entrypoint-initdb.d/0_init_hw0.sql
-      - ./index_hw1.sql:/docker-entrypoint-initdb.d/1_index_hw1.sql
+      - ../sql/init_hw1.sql:/docker-entrypoint-initdb.d/init_hw1.sql
     ports:
       - "5434:5434"
     expose:
