hw_08_microservices_tracing

--- a/mainapp/pom.xml
+++ b/mainapp/pom.xml
@@ -10,7 +10,6 @@
     <groupId>com.slow3586.highload_0224_skv</groupId>
     <artifactId>mainapp</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <packaging>war</packaging>
     <name>mainapp</name>
     <description>mainapp</description>
     <properties>
@@ -100,6 +99,23 @@
             <version>0.0.1-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>io.micrometer</groupId>
+            <artifactId>micrometer-tracing-bridge-brave</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.zipkin.reporter2</groupId>
+            <artifactId>zipkin-reporter-brave</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>net.ttddyy.observation</groupId>
+            <artifactId>datasource-micrometer-spring-boot</artifactId>
+            <version>1.0.3</version>
+        </dependency>
+        <dependency>
+            <groupId>io.projectreactor</groupId>
+            <artifactId>reactor-core-micrometer</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
@@ -159,7 +175,8 @@
                         </configuration>
                     </execution>
                 </executions>
-            </plugin><plugin>
+            </plugin>
+            <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-compiler-plugin</artifactId>
             <version>3.11.0</version>
