--- a/dialogserver/src/main/resources/application.yaml
+++ b/dialogserver/src/main/resources/application.yaml
@@ -16,3 +16,9 @@ management:
   endpoint:
     health:
       enabled: true
+  tracing:
+    enabled: true
+    sampling.probability: 1.0
+  zipkin:
+    tracing:
+      endpoint: http://localhost:9411/api/v2/spans
