--- a/dialogserver/src/main/resources/application.yaml
+++ b/dialogserver/src/main/resources/application.yaml
@@ -9,13 +9,20 @@ server:
 enable-cache: true
 management:
   endpoints:
-    enabled-by-default: false
     web:
       exposure:
-        include: "*"
+        include: health,prometheus
   endpoint:
     health:
       enabled: true
+  metrics:
+    distribution:
+      percentiles-histogram:
+        "[http.server.requests]": true
+  prometheus:
+    metrics:
+      export:
+        enabled: true
   tracing:
     enabled: true
     sampling.probability: 1.0
