--- a/dialogserver/pom.xml
+++ b/dialogserver/pom.xml
@@ -75,6 +75,11 @@
 			<artifactId>datasource-micrometer-spring-boot</artifactId>
 			<version>1.0.3</version>
 		</dependency>
+		<dependency>
+			<groupId>io.micrometer</groupId>
+			<artifactId>micrometer-registry-prometheus</artifactId>
+			<scope>runtime</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
